--- a/README.Rmd
+++ b/README.Rmd
@@ -2,7 +2,7 @@
 title: "README"
 author: "Weronika Wojtanek"
 date: "11 12 2020"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
